# 3000

./: .gitignore  Cargo.toml  README.md  bender-suggestion.scm  bender.scm  compile.sh  install-dependencies.sh  package-lock.json  package.json  test.sh
data/: adjectives  adverbs  nouns  other  plural-nouns  sep-alice-inferno  source-text  verbs
experiments/: generation.sml
experiments/mock-rust/: Cargo.toml
experiments/mock-rust/src/: lib.rs  main.rs
lib/: index.js
native/: Cargo.toml
native/src/: data.rs  description.rs  lib.rs  name.rs  types.rs
native/src/data/: source-text
rs/: README.md  package-lock.json  package.json
rs/lib/: index.js
rs/native/: Cargo.toml
rs/native/src/: data.rs  generate_data.rs  lib.rs
src/: bender-conversation.scm  bender-explanation.scm  bender-generation.scm  bender-suggestion.scm  bender.scm  data.rs  description.rs  lib.rs  name.rs  types.rs
