[package]
name = "threek"
version = "0.2.0"
authors = ["Eduardo Asafe <e@asafe.dev>"]
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
strum = "0.11"
strum_macros = "0.11"
rand = "0.5"
num-traits = "0.2"
num-derive = "0.3"
either = "1.5.3"
lazy_static = "1.4.0"

[dependencies.neon]
version = "0.9.1"
default-features = false
features = ["napi-6"]